Fix 4: Levelled post slider cards and enforced uniform image cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ header ul li a:hover {
 .content .main-content .post .post-image {
   width: 50%;
   height: 200px;
-  float: left;
+  float: none;
 }
 
 .content .main-content .post .post-preview {
